try to fix test exception